--- a/Wind_CFR.ipynb
+++ b/Wind_CFR.ipynb
@@ -2378,8 +2378,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "83a9fd02-6ebf-48b2-9ed2-f19f1add9bf7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### HINT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfb68a80-dbfe-468f-b421-905b753b03a3",
    "metadata": {},
    "outputs": [],
    "source": []
