--- a/Wind_CFR.ipynb
+++ b/Wind_CFR.ipynb
@@ -15,11 +15,18 @@
    "id": "22fe4db0-2f5e-4e6b-bc94-67b0d8fd5150",
    "metadata": {},
    "source": [
-    "## Main question/goals of the challange:\n",
-    "### How good the NextGEMS models simulate wind?\n",
-    "### How much the wind energy prodcution will change in the near and far future for a specific country?\n",
-    "### can we create a hybrid generator (Wind+Solar)?\n",
-    "### What about the extremes, do they become more frequent?"
+    "<div class=\"alert alert-warning\">\n",
+    "<b>Main question/goals of the challange:\n",
+    "<p>\n",
+    "<b> How good the NextGEMS models simulate wind?\n",
+    "<br>    \n",
+    "<b>How much the wind energy prodcution will change in the near and far future for a specific country?\n",
+    "<br>\n",
+    "<b> can we create a hybrid generator (Wind+Solar)?\n",
+    "<br>\n",
+    "<b> What about the extremes, do they become more frequent?\n",
+    "</p>\n",
+    "</div>"
    ]
   },
   {
